--- a/haiqal2.html
+++ b/haiqal2.html
@@ -84,9 +84,9 @@
                                             </div>
                                             <div class="row"> 
                                                 <div class="alice-font main_text text-center">
-                                                <p class="animated zoomIn alice-font" style="color:#b69640; font-size:4em;">HAIQAL</p> 
+                                                <p class="animated zoomIn alice-font" style="color:#b69640; font-size:4em;">Adib</p> 
                                                 <p class="animated zoomIn alice-font" style="color:#8f712f; font-size:4em;">&amp;</p> 
-                                                <p class="animated zoomIn alice-font" style="color:#b69640; font-size:4em;">LINDA</p>
+                                                <p class="animated zoomIn alice-font" style="color:#b69640; font-size:4em;">Ezzati</p>
                                                 </div> 
                                             </div>
                                             <div class="row text-center pt-4"> 
@@ -153,9 +153,9 @@
                                         </div>
                                         <div class="row"> 
                                             <div class="alice-font main_text text-center">
-                                            <p class="animated zoomIn alice-font" style="color:#b69640; font-size:2.5em;">HAIQAL</p> 
+                                            <p class="animated zoomIn alice-font" style="color:#b69640; font-size:2.5em;">Adib</p> 
                                             <p class="animated zoomIn alice-font" style="color:#8f712f; font-size:2.5em;">&amp;</p> 
-                                            <p class="animated zoomIn alice-font" style="color:#b69640; font-size:2.5em;">LINDA</p>
+                                            <p class="animated zoomIn alice-font" style="color:#b69640; font-size:2.5em;">Ezzati</p>
                                             </div> 
                                         </div>
                                         <div class="row"> 
