--- a/haiqal2.html
+++ b/haiqal2.html
@@ -3,14 +3,14 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Haiqal&#9829;Linda</title>
+        <title>Adib&#9829;Ezzati</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noindex, nofollow">
         <meta name="description" content="Tekan pautan untuk lihat jemputan">
-        <meta name="author" content="Haiqal & Linda">
+        <meta name="author" content="Adib & Ezzati">
         <meta name="twitter:description" content="Invitation to our wedding Haiqal&Linda.">
         <meta property="og:site" content="https://adibmuhaimin.github.io/adib-ezzati-wedding-reception/">
-        <meta property="og:title" content="Walimatulurus | Haiqal&#9829;Linda">
+        <meta property="og:title" content="Walimatulurus | Adib&#9829;Ezzati">
         <meta property="og:description" content="Tekan pautan untuk lihat jemputan"> 
         <meta property="og:image" content="img/marriednow-project/Haiqal-Linda-square.png">
         <script src="https://www.youtube.com/iframe_api"></script>
@@ -160,12 +160,12 @@
                                         </div>
                                         <div class="row"> 
                                             <div class="alice-font animated fadeIn main_text text-center" style="font-size:18px; color:#b69640">
-                                                AHAD | 10 SEPT 2023
+                                                AHAD | 10 DEC 2023
                                             </div>
                                         </div> 
                                         <div class="row"> 
                                             <div class="alice-font animated fadeInUp main_text text-center" style="font-size:16px; color:#B69640">
-                                                MZ Fountain Hall, Kajang
+                                                The Gabion Garden Hall, Kuala Lumpur
                                         </div>
                                     </div>   
                                 </div>   
@@ -194,30 +194,28 @@
                                         <p style="font-size: 18px; color:#b69640">
                                             <b>KELUARGA PENGANTIN LELAKI</b>
                                         </p>
-                                        <p class="mb-1" style="font-size:22px;">Halim Bin Haron</p>
-                                        <hr class="my-1">  
-                                        <p style="font-size:22px;">Ramlah Binti Mohammed</p>             
+                                        <p class="mb-1" style="font-size:22px;">Norhayani Binti Nong</p>                                                   
                                         <p class="pt-3 pb-3">&amp;</p>                    
                                         <p style="font-size: 18px; color:#b69640">
                                             <b>KELUARGA PENGANTIN PEREMPUAN</b>
                                         </p>
-                                        <p class="mb-1" style="font-size:22px;">Mohmad Bin Hussin</p>
+                                        <p class="mb-1" style="font-size:22px;">Hajah Rohani</p>
                                         <hr class="my-1">
-                                        <p style="font-size:22px;">Norizan Binti Senin</p>
+                                        <p style="font-size:22px;">To be fill</p>
                                     </div>
                                     <p class="info-greeting aos-init aos-animate my-3" data-aos="fade-up" data-aos-duration="1000" style="font-size:18px;">
                                         Menjemput Dato'/Datin, Tuan/Puan, Encik/Cik ke walimatulurus
                                     </p>   
                                     <div class="info-invitor aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">
-                                        <p style="font-size:22px;">Mohamad Haiqal bin Halim</p>
+                                        <p style="font-size:22px;">Adib Muhaimin Bin Abdullah</p>
                                         <p>&amp;</p>
-                                            <p style="font-size:22px;">Mas Linda binti Mohmad</p>
+                                            <p style="font-size:22px;">Nur Ezzati Binti Ibrahim</p>
                                     </div>
                                     <div class="info-details aos-init aos-animate mt-3" data-aos="fade-up" data-aos-duration="1000">
                                         <p class="mt-3 mb-1" style="font-size:18px;"><b style="color: #b69640">Tarikh</b></p>
                                         <p style="font-size:18px;">Ahad,
                                             10
-                                            September
+                                            Disember
                                             2023</p>
                                         <br>
                                         <p class="mt-3 mb-1" style="font-size:18px;"><b style="color:#b69640">Masa</b></p>
@@ -226,7 +224,7 @@
                                         <br>
                                         <p class="mt-3 mb-1" style="font-size:18px;"><b style="color: #b69640">Tempat</b></p>
                                         <p style="font-size:18px;">
-                                            MZ Fountain Hall, Kampung Sg Ramal Luar, Kajang
+                                            The Gabion Garden Hall, Taman Danau Kota, Kuala Lumpur
                                         </p>
                                     </div>
                                     <div class="info-schedule aos-init aos-animate mt-5" data-aos="fade-up" data-aos-duration="1000">
@@ -287,29 +285,8 @@
                         <footer class="alice-font" style="margin-bottom:10%;">
                             <ul class="pb-20">
                                 <li class="pb-10">
-                                    <p class="hashtag text-center oleo-script-font" style="font-size: 22px; color:#8f712f">#fromschoolmatestosoulmates</p>
-                                </li>
-                                <li class="flex justify-center text-center">
-                                    <p class="mx-2">
-                                        <span style="color: #b69640">
-                                            <i class="fa-brands fa-codepen"></i></span> Developed by<br>
-                                        Haiqal Halim
-                                    </p> 
-                                </li>
-                                <li class="flex justify-center text-center mt-3">
-                                    <p class="mx-2">
-                                        <span style="color: #b69640">
-                                            <i class="fa-solid fa-paintbrush"></i></span> Designed by<br>
-                                            <a href="https://www.linkedin.com/in/tina-hassan/" target="_blank">Tina Hassan</a>
-                                    </p>
-                                </li> 
-                                <li class="flex justify-center text-center mt-3">
-                                    <p class="mx-2">
-                                        <span style="color: #b69640">
-                                            <i class="fa-solid fa-heart-circle-check"></i></span> Approved by<br>
-                                            Linda Mohmad
-                                    </p>
-                                </li>
+                                    <p class="hashtag text-center oleo-script-font" style="font-size: 22px; color:#8f712f">#bismillah</p>
+                                </li>                                
                             </ul>    
                         </footer>       
                     </div>
@@ -374,7 +351,7 @@
                                     <div class="text-center">
                                         <h3 class="feature-title">Lokasi</h3>
                                         <p class="text-center pb-3 text-lg">
-                                            MZ Fountain Hall, Kampung Sungai Ramal Luar, 43000 Kajang, Selangor
+                                            The Gabion Garden Hall, Taman Danau Kota, Kuala Lumpur
                                         </p>
                                     </div>
                                 </div>
@@ -428,64 +405,64 @@
                                         <ol class="list-group list-group-numbered">
                                             <li class="list-group-item d-flex justify-content-between align-items-start ">
                                                 <div class="ms-2 me-auto">
-                                                    <div class="fw-bold">En. Halim</div>
-                                                    0123917203
+                                                    <div class="fw-bold">Hajah Norhayani</div>
+                                                    0133687166
                                                 </div>
                                                 <span class="mx-3 contact-icon">
-                                                    <a href="tel:0123917203">
+                                                    <a href="tel:0133687166">
                                                         <i class='bx bxs-phone bx-flip-horizontal bx-custom-icon-size' ></i>
                                                     </a>
                                                 </span>
                                                 <span class="mx-2 contact-icon">
-                                                    <a href="https://api.whatsapp.com/send?phone=60123917203" target="_blank">
+                                                    <a href="https://api.whatsapp.com/send?phone=60133687166" target="_blank">
                                                         <i class='bx bxl-whatsapp bx-custom-icon-size'></i>
                                                     </a>
                                                 </span>
                                             </li>
                                             <li class="list-group-item d-flex justify-content-between align-items-start">
                                                 <div class="ms-2 me-auto">
-                                                    <div class="fw-bold">Pn. Ramlah</div>
-                                                    0162679646
+                                                    <div class="fw-bold">Zul Azri</div>
+                                                    0133565350
                                                 </div>
                                                 <span class="mx-3 contact-icon">
-                                                    <a href="tel:0162679646">
+                                                    <a href="tel:0133565350">
                                                         <i class='bx bxs-phone bx-flip-horizontal bx-custom-icon-size' ></i>
                                                     </a>
                                                 </span>
                                                 <span class="mx-2 contact-icon">
-                                                    <a href="https://api.whatsapp.com/send?phone=60162679646" target="_blank">
+                                                    <a href="https://api.whatsapp.com/send?phone=60133565350" target="_blank">
                                                         <i class='bx bxl-whatsapp bx-custom-icon-size'></i>
                                                     </a>
                                                 </span>
                                             </li>
                                             <li class="list-group-item d-flex justify-content-between align-items-start">
                                                 <div class="ms-2 me-auto">
-                                                    <div class="fw-bold">Pn. Roshafiza</div>
-                                                    0148494771
+                                                    <div class="fw-bold">Siti Izyan</div>
+                                                    0122822458
                                                 </div>
                                                 <span class="mx-3 contact-icon">
-                                                    <a href="tel:0148494771">
+                                                    <a href="tel:0122822458">
                                                         <i class='bx bxs-phone bx-flip-horizontal bx-custom-icon-size' ></i>
                                                     </a>
                                                 </span>
                                                 <span class="mx-2 contact-icon">
-                                                    <a href="https://api.whatsapp.com/send?phone=60148494771" target="_blank">
+                                                    <a href="https://api.whatsapp.com/send?phone=60122822458" target="_blank">
                                                         <i class='bx bxl-whatsapp bx-custom-icon-size'></i>
                                                     </a>
                                                 </span>
                                             </li> 
                                             <li class="list-group-item d-flex justify-content-between align-items-start">
                                                 <div class="ms-2 me-auto">
-                                                    <div class="fw-bold">Pn. Ramizah</div>
-                                                    0146055042
+                                                    <div class="fw-bold">Ruhaifi Ahmad</div>
+                                                    0176294449
                                                 </div>
                                                 <span class="mx-3 contact-icon">
-                                                    <a href="tel:0146055042">
+                                                    <a href="tel:0176294449">
                                                         <i class='bx bxs-phone bx-flip-horizontal bx-custom-icon-size' ></i>
                                                     </a>
                                                 </span>
                                                 <span class="mx-2 contact-icon">
-                                                    <a href="https://api.whatsapp.com/send?phone=60146055042" target="_blank">
+                                                    <a href="https://api.whatsapp.com/send?phone=60176294449" target="_blank">
                                                         <i class='bx bxl-whatsapp bx-custom-icon-size'></i>
                                                     </a>
                                                 </span>
@@ -501,7 +478,7 @@
                                         <ol class="list-group list-group-numbered">
                                             <li class="list-group-item d-flex justify-content-between align-items-start ">
                                                 <div class="ms-2 me-auto">
-                                                    <div class="fw-bold">Cik. Julia</div>
+                                                    <div class="fw-bold">Hajah Rohani</div>
                                                     0172073270
                                                 </div>
                                                 <span class="mx-3 contact-icon">
@@ -595,7 +572,7 @@
                                 <div class="row">
                                     <div class="col">
                                         <input type="text" readonly class="form-control-plaintext" id="bankName" value="Bank Islam Malaysia Berhad">
-                                        <input type="text" readonly class="form-control-plaintext" value="Mohamad Haiqal bin Halim">
+                                        <input type="text" readonly class="form-control-plaintext" value="Adib Muhaimin Bin Abdullah">
                                     </div>
                                 </div>
                             </div>
