--- a/index.html
+++ b/index.html
@@ -167,6 +167,10 @@
                                             <div class="alice-font animated fadeInUp main_text text-center" style="font-size:16px; color:#B69640">
                                                 The Gabion Garden Hall, Taman Danau Kota
                                         </div>
+                                        <div class="row"> 
+                                            <div class="alice-font animated fadeInUp main_text text-center" style="font-size:16px; color:#B69640">
+                                                Taman Danau Kota
+                                        </div>    
                                     </div>   
                                 </div>   
                             </div> 
@@ -181,7 +185,7 @@
                                     <span></span>
                                     <span></span>
                                 </div>
-                                <span class="music-title">JKVE - Golden Hour (Instrumental)</span>
+                                <span class="music-title">Dearly Beloved - Kingdom Hearts</span>
                             </button>
                         </div>
                         <section class="container section wedding-info aos-init aos-animate alice-font py-4" id="info" data-aos="fade-up" data-aos-duration="1000">
@@ -189,6 +193,9 @@
                                 <div class="wrapper">
                                     <p class="info-greeting aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000" style="font-size:18px;">
                                        ASSALAMUALAIKUM WBT &amp; SALAM SEJAHTERA
+                                    </p>
+                                    <p class="info-greeting aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000" style="font-size:18px;">
+                                       SALAM SEJAHTERA
                                     </p>
                                     <div class="info-invitor aos-init aos-animate mt-3" data-aos="fade-up" data-aos-duration="1000">
                                         <p style="font-size: 18px; color:#b69640">
@@ -217,7 +224,7 @@
                                         <p class="mt-3 mb-1" style="font-size:18px;"><b style="color: #b69640">Tarikh</b></p>
                                         <p style="font-size:18px;">Ahad,
                                             10
-                                            September
+                                            Disember
                                             2023</p>
                                         <br>
                                         <p class="mt-3 mb-1" style="font-size:18px;"><b style="color:#b69640">Masa</b></p>
@@ -256,7 +263,7 @@
                             <img src="img/marriednow-project/divider.png" alt="" class="pl-5 pr-5 pt-5">
                             <div class="d-flex justify-content-center align-items-center">
                                 <div class="wrapper w-full text-center">
-                                    <h3 class="alice-font section-title" style="color:#b69640">Menanti Hari</h3>
+                                    <h3 class="alice-font section-title" style="color:#b69640">Menghitung Hari</h3>
                                     <div id="flipdown" class="flipdown flex justify-center m-auto"></div>
                                 </div>
                             </div>
@@ -265,7 +272,7 @@
                         <script>
                             document.addEventListener('DOMContentLoaded', () => {
                                 // Unix timestamp (in seconds) to count down to
-                                var eventDate = '1694343600';
+                                var eventDate = '1702137600';
 
                                 // Set up FlipDown
                                 var flipdown = new FlipDown(parseInt(eventDate), {
