--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                                         </div> 
                                         <div class="row"> 
                                             <div class="alice-font animated fadeInUp main_text text-center" style="font-size:16px; color:#B69640">
-                                                The Gabion Garden Hall, Taman Danau Kota
+                                                The Gabion Garden Hall,
                                         </div>
                                         <div class="row"> 
                                             <div class="alice-font animated fadeInUp main_text text-center" style="font-size:16px; color:#B69640">
@@ -192,23 +192,21 @@
                             <div class="d-flex justify-content-center align-items-center"> 
                                 <div class="wrapper">
                                     <p class="info-greeting aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000" style="font-size:18px;">
-                                       ASSALAMUALAIKUM WBT &amp; SALAM SEJAHTERA
+                                       ASSALAMUALAIKUM WBT
                                     </p>
                                     <p class="info-greeting aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000" style="font-size:18px;">
-                                       SALAM SEJAHTERA
+                                       &amp; SALAM SEJAHTERA
                                     </p>
                                     <div class="info-invitor aos-init aos-animate mt-3" data-aos="fade-up" data-aos-duration="1000">
                                         <p style="font-size: 18px; color:#b69640">
                                             <b>KELUARGA PENGANTIN LELAKI</b>
                                         </p>
-                                        <p class="mb-1" style="font-size:22px;">Norhayani Binti Nong</p>
-                                        <hr class="my-1">  
-                                        <p style="font-size:22px;">Ramlah Binti Mohammed</p>             
+                                        <p class="mb-1" style="font-size:22px;">Norhayani Binti Nong</p>                                                    
                                         <p class="pt-3 pb-3">&amp;</p>                    
                                         <p style="font-size: 18px; color:#b69640">
                                             <b>KELUARGA PENGANTIN PEREMPUAN</b>
                                         </p>
-                                        <p class="mb-1" style="font-size:22px;">Mohmad Bin Hussin</p>
+                                        <p class="mb-1" style="font-size:22px;">Hajah Rohani</p>
                                         <hr class="my-1">
                                         <p style="font-size:22px;">Norizan Binti Senin</p>
                                     </div>
@@ -220,6 +218,7 @@
                                         <p>&amp;</p>
                                             <p style="font-size:22px;">Nur Ezzati binti Ibrahim</p>
                                     </div>
+                                    <br>
                                     <div class="info-details aos-init aos-animate mt-3" data-aos="fade-up" data-aos-duration="1000">
                                         <p class="mt-3 mb-1" style="font-size:18px;"><b style="color: #b69640">Tarikh</b></p>
                                         <p style="font-size:18px;">Ahad,
@@ -314,13 +313,13 @@
                                     <div class="text-center">
                                         <h3 class="feature-title">Kalendar</h3>
                                         <p class="text-center pb-3 text-lg">
-                                            Ahad, 10 September 2023
+                                            Ahad, 10 Disember 2023
                                         </p>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="d-flex justify-content-center">
-                                        <input type="hidden" id="event_date" value="2023-09-10">
+                                        <input type="hidden" id="event_date" value="2023-12-10">
                                         <div id="color-calendar" class="pb-3"></div>
                                     </div>
                                 </div>
@@ -366,14 +365,14 @@
                                 </div>
                                 <div class="row">
                                     <div class="d-flex justify-content-center">
-                                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15937.674873226357!2d101.7650713!3d2.9811988!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31cdcb95ceb6bb41%3A0x1cb15b3d60eefd31!2sMZ%20Fountain%20Hall!5e0!3m2!1sen!2smy!4v1691237751763!5m2!1sen!2smy" width="500" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15934.363096984167!2d101.7224708!3d3.2016662!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31cc39d91d3e1c7d%3A0xbd79abbf56640b6c!2sThe%20Gabion%20Garden%20Hall!5e0!3m2!1sen!2smy!4v1697799851742!5m2!1sen!2smy" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="d-flex pt-3">
                                         <ul class="list-group list-group-flush list-group-horizontal">
                                             <li class="list-group-item location-icon " style="border-bottom: transparent;"> 
-                                                <a target="_blank" class="float-start" href="https://goo.gl/maps/rLwwbjvmgct89f5n6">
+                                                <a target="_blank" class="float-start" href="https://maps.app.goo.gl/H2VUBYBtb7kBaZnn6">
                                                     <i class="fas fa-map-marked-alt fa-lg"></i>
                                                     <span> GOOGLE MAPS</span>
                                                 </a>  
@@ -573,7 +572,7 @@
                                 <div class="row">
                                     <div class="col">
                                         <div class="input-group mb-3">
-                                            <input type="text" class="form-control" placeholder="" value="14069020312484"  readonly>
+                                            <input type="text" class="form-control" placeholder="" value="05058020247393"  readonly>
                                             <button class="btn btn-outline-secondary" type="button" id="button-addon1" onclick="copyAccount('14069020312484')">Copy</button>
                                         </div>
                                     </div>
