--- a/index.html
+++ b/index.html
@@ -470,71 +470,14 @@
                                             </li>
                                         </ol>
                                     </div>
-                                </div>
-                                <div class="row">
-                                    <p class="text-center pt-3 pb-2 text-lg">
-                                        Keluarga Pengantin Perempuan
-                                    </p>
-                                    <div class="px-4">
-                                        <ol class="list-group list-group-numbered">
-                                            <li class="list-group-item d-flex justify-content-between align-items-start ">
-                                                <div class="ms-2 me-auto">
-                                                    <div class="fw-bold">Cik. Julia</div>
-                                                    0172073270
-                                                </div>
-                                                <span class="mx-3 contact-icon">
-                                                    <a href="tel:0172073270">
-                                                        <i class='bx bxs-phone bx-flip-horizontal bx-custom-icon-size' ></i>
-                                                    </a>
-                                                </span>
-                                                <span class="mx-2 contact-icon">
-                                                    <a href="https://api.whatsapp.com/send?phone=60172073270" target="_blank">
-                                                        <i class='bx bxl-whatsapp bx-custom-icon-size'></i>
-                                                    </a>
-                                                </span>
-                                            </li>
-                                            <li class="list-group-item d-flex justify-content-between align-items-start">
-                                                <div class="ms-2 me-auto">
-                                                    <div class="fw-bold">Cik. Liza</div>
-                                                    0187629298
-                                                </div>
-                                                <span class="mx-3 contact-icon">
-                                                    <a href="tel:0187629298">
-                                                        <i class='bx bxs-phone bx-flip-horizontal bx-custom-icon-size' ></i>
-                                                    </a>
-                                                </span>
-                                                <span class="mx-2 contact-icon">
-                                                    <a href="https://api.whatsapp.com/send?phone=60187629298" target="_blank">
-                                                        <i class='bx bxl-whatsapp bx-custom-icon-size'></i>
-                                                    </a>
-                                                </span>
-                                            </li>
-                                            <li class="list-group-item d-flex justify-content-between align-items-start">
-                                                <div class="ms-2 me-auto">
-                                                    <div class="fw-bold">Cik. Diana</div>
-                                                    01111275392
-                                                </div>
-                                                <span class="mx-3 contact-icon">
-                                                    <a href="tel:01111275392">
-                                                        <i class='bx bxs-phone bx-flip-horizontal bx-custom-icon-size' ></i>
-                                                    </a>
-                                                </span>
-                                                <span class="mx-2 contact-icon">
-                                                    <a href="https://api.whatsapp.com/send?phone=601111275392" target="_blank">
-                                                        <i class='bx bxl-whatsapp bx-custom-icon-size'></i>
-                                                    </a>
-                                                </span>
-                                            </li> 
-                                        </ol>
-                                    </div>
-                                </div>
+                                </div>                                
                             </div>
                         </div>
                     </div>
                 </div>
                 <!-- End Contact Modal --> 
                 
-                <!-- Contact Modal -->
+                <!-- RSVP Modal -->
                 <div class="modal fade" id="rsvpModal"  tabindex="-1" aria-labelledby="giftContent" aria-hidden="true">
                     <div class="modal-dialog  modal-dialog-centered modal-dialog-scrollable modal-xl">
                         <div class="modal-content poppin-font">
@@ -547,7 +490,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- End Contact Modal -->
+                <!-- End RSVP Modal -->
 
                 <!-- Gift Modal -->
                 <div class="modal fade" id="giftModal"  tabindex="-1" aria-labelledby="giftContent" aria-hidden="true">
