--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
-                                <script type="text/javascript" src="https://form.jotform.com/232981663038462"></script>
+                                <script type="text/javascript" src="https://form.jotform.com/jsform/232981663038462"></script>
                             </div>
                         </div>
                     </div>
