--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                                         </div>
                                         <div class="row"> 
                                             <div class="alice-font animated fadeIn main_text text-center" style="font-size:18px; color:#ce7e00">
-                                                AHAD | 10 DEC 2023
+                                                AHAD | 10 Disember 2023
                                             </div>
                                         </div> 
                                         <div class="row"> 
@@ -201,10 +201,10 @@
                                         <p style="font-size: 18px; color:#ce7e00">
                                             <b>KELUARGA PENGANTIN LELAKI</b>
                                         </p>
-                                        <p class="mb-1" style="font-size:22px;">Norhayani Binti Nong</p>                                                    
+                                        <p class="mb-1" style="font-size:22px;">Norhayani binti Nong</p>                                                    
                                     </div>
                                     <p class="info-greeting aos-init aos-animate my-3" data-aos="fade-up" data-aos-duration="1000" style="font-size:18px;">
-                                        Menjemput Dato'/Datin, Tuan/Puan, Encik/Cik ke walimatulurus
+                                        Menjemput YBhg. Dato'/Datin, Tuan/Puan ke Walimatulurus
                                     </p>   
                                     <div class="info-invitor aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">
                                         <p style="font-size:22px;">Adib Muhaimin bin Abdullah</p>
@@ -225,7 +225,13 @@
                                         <br>
                                         <p class="mt-3 mb-1" style="font-size:18px;"><b style="color: #ce7e00">Tempat</b></p>
                                         <p style="font-size:18px;">
-                                            The Gabion Garden Hall, Taman Danau Kota, Kuala Lumpur
+                                            The Gabion Garden Hall
+                                        </p>
+                                        <p style="font-size:18px;">
+                                            Taman Danau Kota
+                                        </p>
+                                        <p style="font-size:18px;">
+                                            Kuala Lumpur
                                         </p>
                                     </div>
                                     <div class="info-schedule aos-init aos-animate mt-5" data-aos="fade-up" data-aos-duration="1000">
@@ -283,6 +289,11 @@
                             </div>
                             <img class="img-custom" src="img/marriednow-project/bg-prayer-2.png" alt="">
                         </section>
+                        <div class="wrapper absolute mt-3" style="width: 85%">
+                            <p class="prayer-text" style="font-style:italic; font-size: 15px;">
+                                Semoga dengan kehadiran dan doa restu hadirin akan menyerikan lagi majlis kami dan diberkati oleh Allah SWT. Terima kasih.
+                            </p>
+                        </div>            
                         <footer class="alice-font" style="margin-bottom:10%;">
                             <ul class="pb-20">
                                 <li class="pb-10">
