--- a/index.html
+++ b/index.html
@@ -289,11 +289,13 @@
                             </div>
                             <img class="img-custom" src="img/marriednow-project/bg-prayer-2.png" alt="">
                         </section>
-                        <div class="wrapper absolute mt-3" style="width: 85%">
-                            <p class="prayer-text" style="font-style:italic; font-size: 15px;">
-                                Semoga dengan kehadiran dan doa restu hadirin akan menyerikan lagi majlis kami dan diberkati oleh Allah SWT. Terima kasih.
-                            </p>
-                        </div>            
+                        <section class="container section prayer aos-init aos-animate mb-4" data-aos="fade-up" data-aos-duration="1000">            
+                            <div class="wrapper absolute mt-3" style="width: 85%">
+                                <p class="prayer-text" style="font-style:italic; font-size: 15px;">
+                                    Semoga dengan kehadiran dan doa restu hadirin akan menyerikan lagi majlis kami dan diberkati oleh Allah SWT. Terima kasih.
+                                </p>
+                            </div>
+                        </section>    
                         <footer class="alice-font" style="margin-bottom:10%;">
                             <ul class="pb-20">
                                 <li class="pb-10">
@@ -437,12 +439,12 @@
                                                     0162679646
                                                 </div>
                                                 <span class="mx-3 contact-icon">
-                                                    <a href="tel:0162679646">
+                                                    <a href="tel:0176294449">
                                                         <i class='bx bxs-phone bx-flip-horizontal bx-custom-icon-size' ></i>
                                                     </a>
                                                 </span>
                                                 <span class="mx-2 contact-icon">
-                                                    <a href="https://api.whatsapp.com/send?phone=60162679646" target="_blank">
+                                                    <a href="https://api.whatsapp.com/send?phone=60176294449" target="_blank">
                                                         <i class='bx bxl-whatsapp bx-custom-icon-size'></i>
                                                     </a>
                                                 </span>
