--- a/index.html
+++ b/index.html
@@ -292,17 +292,22 @@
                         <section class="container section prayer aos-init aos-animate mb-4" data-aos="fade-up" data-aos-duration="1000">            
                             <div class="wrapper absolute mt-3" style="width: 85%">
                                 <p class="prayer-text" style="font-style:italic; font-size: 15px;">
-                                    Semoga dengan kehadiran dan doa restu hadirin akan menyerikan lagi majlis kami dan diberkati oleh Allah SWT. Terima kasih.
+                                    Semoga dengan kehadiran dan doa restu hadirin akan menyerikan lagi majlis kami dan diberkati oleh Allah SWT.
+                                </p>
+                            </div>
+                            <div class="wrapper absolute mt-3" style="width: 85%">
+                                <p class="prayer-text" style="font-style:italic; font-size: 15px;">
+                                    Terima kasih.
                                 </p>
                             </div>
                         </section>    
-                        <footer class="alice-font" style="margin-bottom:10%;">
+                        <!--  <footer class="alice-font" style="margin-bottom:10%;">
                             <ul class="pb-20">
                                 <li class="pb-10">
                                     <p class="hashtag text-center oleo-script-font" style="font-size: 22px; color:#8f712f">#bismillah</p>
                                 </li>                                
                             </ul>    
-                        </footer>       
+                        </footer> -->      
                     </div>
                 </div>
             <div class="col-lg "></div>
