--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
                             <div class="modal-body">
                                 <div class="row mb-3">
                                     <div class="col">
-                                        <img src="img/qr-img.jpeg" class="rounded mx-auto d-block" alt="qrcode" style="width:50%;">
+                                        <img src="img/qr-code.jpg" class="rounded mx-auto d-block" alt="qrcode" style="width:50%;">
                                     </div>
                                 </div> 
                                 <div class="row">
