--- a/index.html
+++ b/index.html
@@ -299,13 +299,13 @@
                                 </p>
                             </div>                            
                         </section>    
-                        <!--  <footer class="alice-font" style="margin-bottom:10%;">
+                        <footer class="alice-font" style="margin-bottom:10%;">
                             <ul class="pb-20">
                                 <li class="pb-10">
-                                    <p class="hashtag text-center oleo-script-font" style="font-size: 22px; color:#8f712f">#bismillah</p>
+                                    <!-- <p class="hashtag text-center oleo-script-font" style="font-size: 22px; color:#8f712f">#bismillah</p>  -->
                                 </li>                                
                             </ul>    
-                        </footer> -->      
+                        </footer>      
                     </div>
                 </div>
             <div class="col-lg "></div>
@@ -422,7 +422,7 @@
                                         <ol class="list-group list-group-numbered">
                                             <li class="list-group-item d-flex justify-content-between align-items-start ">
                                                 <div class="ms-2 me-auto">
-                                                    <div class="fw-bold">Hajah Norhayani</div>
+                                                    <div class="fw-bold">Norhayani binti Nong</div>
                                                     0133687166
                                                 </div>
                                                 <span class="mx-3 contact-icon">
@@ -438,7 +438,7 @@
                                             </li>
                                             <li class="list-group-item d-flex justify-content-between align-items-start">
                                                 <div class="ms-2 me-auto">
-                                                    <div class="fw-bold">Ruhaifi Ahmad</div>
+                                                    <div class="fw-bold">Ruhaifi Ahmad bin Abdullah</div>
                                                     0176294449
                                                 </div>
                                                 <span class="mx-3 contact-icon">
@@ -454,7 +454,7 @@
                                             </li>
                                             <li class="list-group-item d-flex justify-content-between align-items-start">
                                                 <div class="ms-2 me-auto">
-                                                    <div class="fw-bold">Zul Azri</div>
+                                                    <div class="fw-bold">Zul Azri bin Abdullah</div>
                                                     0133565350
                                                 </div>
                                                 <span class="mx-3 contact-icon">
@@ -470,7 +470,7 @@
                                             </li> 
                                             <li class="list-group-item d-flex justify-content-between align-items-start">
                                                 <div class="ms-2 me-auto">
-                                                    <div class="fw-bold">Siti Izyan</div>
+                                                    <div class="fw-bold">Siti Izyan binti Abdullah</div>
                                                     0122822458
                                                 </div>
                                                 <span class="mx-3 contact-icon">
