--- a/index.html
+++ b/index.html
@@ -197,6 +197,9 @@
                                     <p class="info-greeting aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000" style="font-size:18px;">
                                        &amp; SALAM SEJAHTERA
                                     </p>
+                                    <p class="info-greeting aos-init aos-animate my-3" data-aos="fade-up" data-aos-duration="1000" style="font-size:18px;">
+                                        Alhamdulillah dengan penuh kesyukuran diatas limpah kurnia Allah SWT kami
+                                    </p>
                                     <div class="info-invitor aos-init aos-animate mt-3" data-aos="fade-up" data-aos-duration="1000">
                                         <p style="font-size: 18px; color:#ce7e00">
                                             <b>KELUARGA PENGANTIN LELAKI</b>
@@ -204,7 +207,7 @@
                                         <p class="mb-1" style="font-size:22px;">Norhayani binti Nong</p>                                                    
                                     </div>
                                     <p class="info-greeting aos-init aos-animate my-3" data-aos="fade-up" data-aos-duration="1000" style="font-size:18px;">
-                                        Menjemput YBhg. Dato'/Datin, Tuan/Puan ke Walimatulurus
+                                        Berbesar hati menjemput YBhg. Dato'/Datin, Tuan/Puan ke Walimatulurus
                                     </p>   
                                     <div class="info-invitor aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">
                                         <p style="font-size:22px;">Adib Muhaimin bin Abdullah</p>
