--- a/index.html
+++ b/index.html
@@ -527,14 +527,14 @@
                                 <div class="row">
                                     <div class="col">
                                         <div class="input-group mb-3">
-                                            <input type="text" class="form-control" placeholder="" value="05058020247393"  readonly>
-                                            <button class="btn btn-outline-secondary" type="button" id="button-addon1" onclick="copyAccount('14069020312484')">Copy</button>
+                                            <input type="text" class="form-control" placeholder="" value="7621164726"  readonly>
+                                            <button class="btn btn-outline-secondary" type="button" id="button-addon1" onclick="copyAccount('7621164726')">Copy</button>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col">
-                                        <input type="text" readonly class="form-control-plaintext" id="bankName" value="Bank Islam Malaysia Berhad">
+                                        <input type="text" readonly class="form-control-plaintext" id="bankName" value="CIMB Bank">
                                         <input type="text" readonly class="form-control-plaintext" value="Adib Muhaimin bin Abdullah">
                                     </div>
                                 </div>
