--- a/index.html
+++ b/index.html
@@ -504,6 +504,7 @@
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">                                
+                                <!-- <script type="text/javascript" src="https://form.jotform.com/jsform/232981663038462"></script>  -->
                                 <script type="text/javascript" src="https://form.jotform.com/jsform/232981663038462"></script>
                                 <!-- <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfx1Hgkuzegk9nWTpsETntgwhhYeFrUF3rIQqXGPWGB5uPM5A/viewform?embedded=true" width="640" height="1116" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>  -->
                             </div>
