--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         </ul>
                     </nav>
                     <div class="main-div d-none">
-                        <section class="container-fluid  section__height main-card" style="background-image: url('img/marriednow-project/HL-bg.png')">
+                        <section class="container-fluid  section__height main-card" style="background-image: url('img/Adib-Ezzati-bg.png')">
                             <div class="wrapper pb-16">
                                 <div class="align-items-center animated fadeInDow">
                                     <div class="container d-flex flex-column aligns-items-center justify-content-center">
